[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allure-pytest-mecher"
version = "2.12.3"
authors = [
  { name="Maksim Cherniak", email="maximchernyak98@gmail.com" },
]
description = "Modified allure-pytest"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.poe.tasks]
linter = "flake8 ./allure-*/src ./tests"
tests = "pytest"
allure-collect = "pytest -p allure_pytest --alluredir ./.allure-results --clean-alluredir --allure-link-pattern issue:https://github.com/allure-framework/allure-python/issues/{0}"
allure-generate = "allure generate --clean --output ./.allure-report ./.allure-results"
allure-open = "allure open ./.allure-report"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = [
    "-p", "no:allure_pytest",
    "-p", "no:allure_pytest_bdd"
]
